@@ -1,3 +1,7 @@
+Wed Mar 26 14:33:00 2014  Narihiro Nakamura  <authornari@gmail.com>
+
+	* internal.h (USE_SYMBOL_GC): enable Symbol GC by default (USE_SYMBOL_GC == 1).
+
 Tue Mar 25 22:57:11 2014  Narihiro Nakamura  <authornari@gmail.com>
 
 	* parse.y: support Symbol GC. [ruby-trunk Feature #9634]
